--- a/resources/seattlecoffeegear.liquid
+++ b/resources/seattlecoffeegear.liquid
@@ -1,6 +1,6 @@
 ---
 layout: blogPost.html
 name: Seattle Coffee Gear
-logo: 'https://yt3.googleusercontent.com/do5VQyNWo2b1MLfkyL4T-9jmRZ-P-fPfzQCe1EBJK6uHU4cySKVCUSrUI_xdknL0OHxk8cfLtXM=s176-c-k-c0x00ffffff-no-rj'
+logo: 'https://www.seattlecoffeegear.com/cdn/shop/files/SCG_LOGO_Primary_Red_Black.svg?v=1702922034'
 website: 'https://www.youtube.com/@SeattleCoffeeGear'
 ---
