adjusted seattle coffee gear logo and updated website

--- a/resources/seattlecoffeegear.liquid
+++ b/resources/seattlecoffeegear.liquid
@@ -1,6 +1,6 @@
 ---
 layout: blogPost.html
 name: Seattle Coffee Gear
-logo: 'https://www.seattlecoffeegear.com/cdn/shop/files/SCG_LOGO_Primary_Red_Black.svg?v=1702922034'
-website: 'https://www.youtube.com/@SeattleCoffeeGear'
+logo: 'https://www.seattlecoffeegear.com/cdn/shop/files/SCG_LOGO_Primary_Red_Black.svg?v=1702922034&width=600'
+website: 'https://www.seattlecoffeegear.com'
 ---
