--- a/resources/seattlecoffeegear.liquid
+++ b/resources/seattlecoffeegear.liquid
@@ -1,6 +1,6 @@
 ---
 layout: blogPost.html
 name: Seattle Coffee Gear
-logo: 'https://www.seattlecoffeegear.com/cdn/shop/files/SCG_LOGO_Primary_Red_Black.svg?v=1702922034&width=600'
+logo: 'https://yt3.ggpht.com/smICfnDHWpsNmlW5e3GbIGLJpCHH8XhIHUfnIo5siW2J0LXj3ftFnr-8_-VUsyMPhE9CsMiyJQ=s176-c-k-c0x00ffffff-no-rj-mo'
 website: 'https://www.seattlecoffeegear.com'
 ---
