going vanilla css

--- a/_includes/layouts/default.html
+++ b/_includes/layouts/default.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="generator" content="Eleventy" />
     <link rel="icon" href="https://api.iconify.design/material-symbols-light:coffee.svg" />
-    <link rel="stylesheet" href="/bundle.css" />
+    <link rel="stylesheet" href="/main.css" />
     <title>{{title | default: "Tom's Coffee Blog"}}</title>
 </head>
 
-<body class="has-background-light">
-    <nav class="navbar is-info" role="navigation" aria-label="main navigation">
+<body>
+    <nav class="" role="navigation" aria-label="main navigation">
+        <h1>Welcome to my Coffee Blog</h1>
         <div class="navbar-brand">
             <a class="navbar-item" href="/">
                 <img src="https://api.iconify.design/material-symbols-light:coffee.svg" width="30px" height="30px" />
@@ -45,7 +46,7 @@
     <footer class="footer has-background-info">
         <div class="content has-text-centered">
             <p>
-                <a href="https://www.11ty.dev/" target="_blank" class="has-text-light">
+                <a href="https://www.11ty.dev/" target="_blank" class="text-red-500">
                     Made with 11ty&nbsp; | &nbsp;
                     <a href="https://slandath.github.io" target="_blank" class="has-text-light">
                         My Website&nbsp; | &nbsp;
