--- a/index.liquid
+++ b/index.liquid
@@ -2,14 +2,12 @@
 layout: default.html
 title: Tom's Coffee Blog
 ---
-<main class="container has-text-centered">
-    <h1 class="is-size-1">Tom's Coffee Blog</h1>
-    <p class="is-size-5">
+<main>
+    <h1>Tom's Coffee Blog</h1>
+    <p class="espresso">
         I'm not a barista, but I will go out of my way for a good cup of coffee.
     </p>
-    <div class="block"></div>
-    <figure class="image is-16by9">
-        <img src="https://raw.githubusercontent.com/slandath/images/main/coffee/beans.jpeg" width="968px" height="544px"/>
-    </figure>
+    <div class="image-container width-50 aspect-ratio-3-2">
+        <img src="https://raw.githubusercontent.com/slandath/images/main/coffee/beans.jpeg" alt="Scooping Beans"/>
+    </div>
 </main>
-<div class="block"></div>
