--- a/index.liquid
+++ b/index.liquid
@@ -3,11 +3,13 @@ layout: default.html
 title: Tom's Coffee Blog
 ---
 <main>
+    <div class="main-container">
     <h1>Tom's Coffee Blog</h1>
     <p class="espresso">
         I'm not a barista, but I will go out of my way for a good cup of coffee.
     </p>
-    <div class="image-container width-50 aspect-ratio-3-2">
+    <div class="image-container width-25 aspect-ratio-3-2">
         <img src="https://raw.githubusercontent.com/slandath/images/main/coffee/beans.jpeg" alt="Scooping Beans"/>
     </div>
+</div>
 </main>
