reformatting for landscape done

--- a/_includes/layouts/default.html
+++ b/_includes/layouts/default.html
@@ -15,7 +15,7 @@
     <div class="grid-container">
         <nav>
             <div class="flex-container">
-                <a href="/"><img src="assets/logo.svg" width="30px" height="30px" alt="logo" /></a>
+                <a href="/"><img class="image-container width-100 aspect-ratio-1-1" src="assets/logo.svg" alt="logo" /></a>
                 <ul class="nav-links">
                     <li><a href="/">Home</a></li>
                     <li><a href="/brands">Brands</a></li>
