--- a/blog/995-eleventy.liquid
+++ b/blog/995-eleventy.liquid
@@ -2,6 +2,7 @@
 layout: blogPost.html
 title: Eleventy
 date: 2025-01-31
+tagline: Oh brother, the gaps between these blog entries are enormous.
 ---
 
 <p>Oh brother, the gaps between these blog entries are enormous.  For 2025, I'll shoot for an update per quarter, instead of once per year.</p>
