--- a/blog/996-bulma.liquid
+++ b/blog/996-bulma.liquid
@@ -2,6 +2,7 @@
 layout: blogPost.html
 title: Bulma
 date: 2024-01-27
+tagline: After a break, I'm back to give this site a little TLC.
 ---
 <p>After a break to work on some other projects, I&#39;m back to give this site a little TLC.</p>
 <h2>New Stuff</h2>
