--- a/blog/998-recipes.liquid
+++ b/blog/998-recipes.liquid
@@ -2,6 +2,7 @@
 layout: blogPost.html
 title: New Recipes Available
 date: 2023-10-27
+tagline: The recipe tools are live!
 ---
 <p>The recipe tools are live!  To start there are:</p>
 <ul>
