--- a/blog/999-welcome.liquid
+++ b/blog/999-welcome.liquid
@@ -2,6 +2,7 @@
 layout: blogPost.html
 title: Welcome
 date: 2023-10-11
+tagline: Welcome to my coffee site!
 ---
 <p>Hello and welcome to my coffee site! Let&#39;s discuss the Three W&#39;s:</p>
 <h2>Who?</h2>
