--- a/_includes/layouts/blogPost.html
+++ b/_includes/layouts/blogPost.html
@@ -1,10 +1,12 @@
 ---
 layout: default.html
 ---
-<article class="container">
-    <div class="content mb-4">
-        <h1 class="has-text-centered">{{title}}</h1>
-        <p class="has-text-centered">{{date | date: "%B %d, %Y"}} by Tom</p>
+<article>
+    <div class="main-container">
+        <h1>{{title}}</h1>
+        <p class="espresso">{{date | date: "%B %d, %Y"}} by Tom</p>
+        <div class="article-container">
         {{content}}
     </div>
+</div>
 </article>
