--- a/equipment.liquid
+++ b/equipment.liquid
@@ -1,34 +1,25 @@
 ---
 layout: default.html
+title: Equipment
 ---
-<main class="container has-text-centered">
-    <h1 class="is-size-1 has-text-centered">Equipment</h1>
-<div class="container">
-    <div class="columns is-multiline py-4">
+<main>
+  <div class="main-container">
+    <h1>Equipment I Use</h1>
+    <div class="card-container">
         {%- for item in collections.equipment -%}
-          <div class="column is-one-quarter">
-            <div class="card">
-              <div class="card-image py-4">
-                <figure class="image is-128x128 mx-auto">
-                  <img src="{{item.data.logo}}" alt="logo" height="100px" width="100px" />
-                </figure>
-              </div>
-              <header>
-                <p class="card-header-title is-centered">
-                  {{item.data.name}}
-                </p>
-              </header>
-              <div class="card-content has-text-centered">
-                <a
-                  href="{{item.data.website}}"
-                  class="button is-info"
-                  target="_blank"
-                >
-                  Website
-                </a>
-              </div>
-            </div>
+        <div class="card">
+          <div class="card-heading">
+            <h2>{{item.data.name}}</h2>
           </div>
+          <div class="card-body">
+          <div class="image-container width-50 aspect-ratio-1-1">
+            <img src="{{item.data.logo}}" alt="brand logo">
+          </div>
+          </div>
+          <div class="card-footer">
+            <a class="espresso" href="{{item.data.website}}">Website</a>
+          </div>
+        </div>
         {%- endfor -%}
     </div>
   </div>
