--- a/main.css
+++ b/main.css
@@ -18,8 +18,12 @@ html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+article p {
+  color: var(--espresso)
+}
+
 body {
-  height: 100%;
+  height: 100vh;
   font-size: 16px;
   color: var(--espresso);
   background-color: var(--cream);
@@ -40,6 +44,69 @@ h1 {
 nav {
   background-color: var(--brown);
   padding: 1rem;
+}
+
+.article-container {
+  display: block;
+  padding: 2rem;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  background: var(--white);
+  border-radius: .50rem;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  width: 200px;
+  height: 250px;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  text-align: center;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.card-body p {
+  color: var(--espresso);
+}
+
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+
+@media (max-width: 700px) {
+  .card-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+}
+
+.card-heading {
+  background: var(--caramel);
+  border-radius: .5rem .5rem 0 0;
+  text-align: center;
+  padding: .1rem 1rem .1rem 1rem
+}
+
+.card-heading h2 {
+  font-size: 1rem;
+}
+
+.card-footer {
+  background: var(--caramel);
+  text-align: center;
+  border-radius: 0 0 .5rem .5rem;
+  padding: .5rem;
+}
+
+.card-footer a:hover {
+  font-weight: bold;
 }
 
 .espresso {
@@ -104,6 +171,8 @@ p {
   width: var(--image-width, 100%); /* Set the desired width */
   aspect-ratio: var(--aspect-ratio, 3 / 2);
   overflow: hidden; /* Hide overflow if necessary */
+  margin: 0 auto;
+  padding: .5rem
 }
 
 .image-container img {
