mobile breakpoints working

--- a/_includes/layouts/blogPost.html
+++ b/_includes/layouts/blogPost.html
@@ -2,11 +2,11 @@
 layout: default.html
 ---
 <article>
-    <div class="main-container">
+    <div class="blog-container">
         <h1>{{title}}</h1>
         <p class="espresso">{{date | date: "%B %d, %Y"}} by Tom</p>
         <div class="article-container">
-        {{content}}
+            {{content}}
+        </div>
     </div>
-</div>
 </article>
