french press recipe working

--- a/_includes/layouts/default.html
+++ b/_includes/layouts/default.html
@@ -18,13 +18,8 @@
         {% include footer.html %}
     </div>
 </body>
-<script>
-    const hamburger = document.querySelector('.hamburger');
-    const navLinks = document.querySelector('.nav-links');
+<script src="/script.js">
 
-    hamburger.addEventListener('click', () => {
-        navLinks.classList.toggle('active');
-    });
 </script>
 
 </html>
