--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,10 +8,11 @@
         </button>
         <ul class="nav-links">
             <li><a href="/">Home</a></li>
+            <li><a href="/recipes/frenchpress">Recipes</a></li>
             <li><a href="/brands">Brands</a></li>
             <li><a href="/equipment">Equipment</a></li>
             <li><a href="/resources">Resources</a></li>
-            <li><a href="/shops">Shop</a></li>
+            <li><a href="/shops">Shops</a></li>
             <li><a href="/blog">Blog</a></li>
         </ul>
     </div>
