--- a/blog.liquid
+++ b/blog.liquid
@@ -3,7 +3,7 @@ layout: default.html
 title: Blog
 ---
 
-<main>
+<article>
   <div class="main-container">
     <h1>Blog Posts</h1>
     <div class="card-container">
@@ -23,4 +23,4 @@ title: Blog
       {%- endfor -%}
     </div>
   </div>
-</main>
+</article>
