--- a/main.css
+++ b/main.css
@@ -41,6 +41,16 @@ h1 {
   font-size: 2.5rem;
 }
 
+input {
+  padding: 0.5rem;
+  font-size: 1.25rem;
+  color: var(--espresso);
+  text-align: center;
+  border-radius: 0.5rem;
+  border: 1px solid var(--espresso);
+  width: 50%;
+}
+
 nav {
   background-color: var(--brown);
   padding: 1rem;
@@ -63,6 +73,7 @@ nav {
   flex-direction: column;
   background: var(--white);
   border-radius: 0.5rem;
+  border: 1px solid var(--espresso);
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
     rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
   width: 200px;
@@ -90,7 +101,8 @@ nav {
 
 .card-heading {
   background: var(--caramel);
-  border-radius: 0.5rem 0.5rem 0 0;
+  border-radius: 0.438rem 0.438rem 0 0;
+  border-bottom: 1px solid var(--espresso);
   text-align: center;
   padding: 0.1rem 1rem 0.1rem 1rem;
 }
@@ -102,7 +114,8 @@ nav {
 .card-footer {
   background: var(--caramel);
   text-align: center;
-  border-radius: 0 0 0.5rem 0.5rem;
+  border-radius: 0 0 0.438rem 0.438rem;
+  border-top: 1px solid var(--espresso);
   padding: 0.5rem;
 }
 
@@ -136,7 +149,7 @@ p {
 
 .grid-container {
   display: grid;
-  grid-template-rows: 5rem 1fr 5rem;
+  grid-template-rows: 5rem 1fr 6rem;
   height: 100vh;
 }
 
@@ -167,6 +180,7 @@ p {
 .nav-container {
   display: flex;
   align-items: center;
+  padding-top: 0.25rem;
   gap: 2rem;
 }
 
@@ -189,13 +203,42 @@ p {
   color: var(--caramel);
 }
 
+.recipe {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: var(--white);
+  border-radius: 0.5rem;
+  border: 1px solid var(--espresso);
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+
+.recipe-heading {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  font-size: 1.25rem;
+  font-weight: bold;
+  padding: 1rem;
+  width: 100%;
+  border-radius: 0.438rem 0.438rem 0 0;
+  border-bottom: 1px solid var(--espresso);
+  background-color: var(--caramel);
+}
+
+.recipe-body {
+  padding: 1rem;
+}
+
 /* Image Container */
 .image-container {
   width: var(--image-width, 100%); /* Set the desired width */
   aspect-ratio: var(--aspect-ratio, 3 / 2);
   overflow: hidden; /* Hide overflow if necessary */
   margin: 0 auto;
-  padding: 0.5rem;
 }
 
 .image-container img {
@@ -225,6 +268,10 @@ p {
 
 .width-50 {
   --image-width: 50%;
+}
+
+.width-60 {
+  --image-width: 60%;
 }
 
 .width-75 {
