--- a/recipes/frenchpress.liquid
+++ b/recipes/frenchpress.liquid
@@ -1,6 +1,8 @@
 ---
 layout: default.html
 title: French Press Recipe
+logo: 'https://www.oxo.com/media/catalog/product/cache/0896d24226ba929ed2cdc43dc64054aa/b/0/b00yeykk8u_8710100v2_9_cup_coffee_maker_-_wirecutter_1.jpg'
+link: /recipes/frenchpress
 ---
 
 <main class="main-container">
