--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
         </button>
         <ul class="nav-links">
             <li><a href="/">Home</a></li>
-            <li><a href="/recipes/frenchpress">Recipes</a></li>
+            <li><a href="/recipes">Recipes</a></li>
             <li><a href="/brands">Brands</a></li>
             <li><a href="/equipment">Equipment</a></li>
             <li><a href="/resources">Resources</a></li>
