--- a/main.css
+++ b/main.css
@@ -53,6 +53,8 @@ input {
 
 nav {
   background-color: var(--brown);
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
   padding: 1rem;
 }
 
