--- a/recipes/drip.liquid
+++ b/recipes/drip.liquid
@@ -1,10 +1,12 @@
 ---
 layout: default.html
-title: French Press Recipe
+title: Drip Coffee Recipe
+logo: 'https://d9pl0lig74xnv.cloudfront.net/catalog/product/cache/91e9c011f0ac998e686df01a906b8401/1/0/10938-01_8.jpg'
+link: /recipes/drip
 ---
 
 <main class="main-container">
-    <h1>French Press Coffee Recipe</h1>
+    <h1>Drip Coffee Recipe</h1>
     <div class="recipe">
         <div class="recipe-heading">
             <div>            
