drip recipe updated

--- a/recipes/drip.liquid
+++ b/recipes/drip.liquid
@@ -1,5 +1,5 @@
 ---
-layout: default.html
+layout: drip.html
 title: Drip Coffee Recipe
 logo: 'https://d9pl0lig74xnv.cloudfront.net/catalog/product/cache/91e9c011f0ac998e686df01a906b8401/1/0/10938-01_8.jpg'
 link: /recipes/drip
@@ -10,17 +10,17 @@ link: /recipes/drip
     <div class="recipe">
         <div class="recipe-heading">
             <div>            
-                <label for="brewedCoffee">Cups of Coffee</label>
+                <label for="dripBrewedCoffee">Cups of Coffee</label>
             </div>
             <div>
-            <input type="number" id="brewedCoffee" min="1" max="8" />
+            <input type="number" id="dripBrewedCoffee" min="1" max="12" />
             </div>
         </div>
         <div class="recipe-body">
-            <p id="waterAmt" class="espresso">
+            <p id="dripWaterAmt" class="espresso">
                 0 fl oz water
             </p>
-            <p id="coffeeAmt" class="espresso">
+            <p id="dripCoffeeAmt" class="espresso">
                 0 tbsp coffee
             </p>
         </div>
