--- a/shops/lab.liquid
+++ b/shops/lab.liquid
@@ -5,7 +5,8 @@ title: Lucky Lab Coffee
 name: Lucky Lab Coffee
 location: Austin, TX
 description: Best Coffee in Austin
-logo: 'https://toast-sites-prod.nyc3.cdn.digitaloceanspaces.com/restaurantImages/0602cee3-4893-4c39-94ba-2c8ea4ef05b9/87873LLCC-LogoMain.png'
+logo: /assets/luckylab200.png
+website: /shops/lab
 ---
 
 <h1>Lucky Lab Coffee</h1>
