--- a/shops/madcap.liquid
+++ b/shops/madcap.liquid
@@ -5,7 +5,8 @@ title: Madcap Coffee
 name: Madcap Coffee
 location: Grand Rapids, MI
 description: My Annual Ritual
-logo: 'https://raw.githubusercontent.com/slandath/images/8344388c425896748204f060167cfe9847a621e1/coffee/madcap-logo.svg'
+logo: /assets/madcap200.png
+website: /shops/madcap
 ---
 
 <h1>Madcap Coffee</h1>
