--- a/shops/victors.liquid
+++ b/shops/victors.liquid
@@ -5,7 +5,8 @@ title: Victor's Celtic Coffee
 name: Victor's Celtic Coffee
 location: Redmond, WA
 description: My favorite spot in Seattle
-logo: 'https://raw.githubusercontent.com/slandath/images/main/coffee/beans.jpeg'
+logo: /assets/victors200.png
+website: /shops/victors
 ---
 
 <h1>Victor&#39;s Celtic Coffee</h1>
