--- a/shops/vita.liquid
+++ b/shops/vita.liquid
@@ -5,7 +5,8 @@ title: Caffe Vita
 name: Caffe Vita
 location: Seattle, WA
 description: My go-to in Downtown Seattle
-logo: 'https://www.caffevita.com/cdn/shop/t/105/assets/logo.svg?v=89180471563119258291675103906'
+logo: /assets/caffevita300.png
+website: /shops/vita
 ---
 
 <h1>Caffe Vita</h1>
