--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,8 @@
 <nav>
     <div class="nav-container">
-        <a href="/"><img class="image-container width-100 aspect-ratio-1-1" src="/assets/logo.svg" alt="logo" /></a>
+        <a href="/"><img class="image-container width-100 aspect-ratio-1-1"
+                src="https://raw.githubusercontent.com/slandath/images/refs/heads/main/coffee/big-cup.png"
+                alt="logo" /></a>
         <button class="hamburger">
             <div class="bar"></div>
             <div class="bar"></div>
