pointed image urls to github images repo

--- a/_includes/layouts/default.html
+++ b/_includes/layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Eleventy description" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="generator" content="Eleventy" />
-    <link rel="icon" href="/assets/logo.svg" />
+    <link rel="icon" href="https://raw.githubusercontent.com/slandath/images/refs/heads/main/coffee/big-cup.png" />
     <link rel="stylesheet" href="/main.css" />
     <title>{{title | default: "Tom's Coffee Blog"}}</title>
 </head>
