--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <nav>
     <div class="nav-container">
         <a href="/"><img class="image-container width-100 aspect-ratio-1-1"
-                src="https://raw.githubusercontent.com/slandath/images/refs/heads/main/coffee/big-cup.png"
+                src="https://raw.githubusercontent.com/slandath/images/2400c16b6d6bb233068157dc627de04dd85c8f7d/coffee/logo.svg"
                 alt="logo" /></a>
         <button class="hamburger">
             <div class="bar"></div>
