--- a/shops/victors.liquid
+++ b/shops/victors.liquid
@@ -5,7 +5,7 @@ title: Victor's Celtic Coffee
 name: Victor's Celtic Coffee
 location: Redmond, WA
 description: My favorite spot in Seattle
-logo: /assets/victors200.png
+logo: https://raw.githubusercontent.com/slandath/images/refs/heads/main/coffee/victors200.png
 website: /shops/victors
 ---
 
