--- a/shops/vita.liquid
+++ b/shops/vita.liquid
@@ -5,7 +5,7 @@ title: Caffe Vita
 name: Caffe Vita
 location: Seattle, WA
 description: My go-to in Downtown Seattle
-logo: /assets/caffevita300.png
+logo: https://raw.githubusercontent.com/slandath/images/refs/heads/main/coffee/caffevita200.png
 website: /shops/vita
 ---
 
