--- a/shops/lab.liquid
+++ b/shops/lab.liquid
@@ -5,7 +5,7 @@ title: Lucky Lab Coffee
 name: Lucky Lab Coffee
 location: Austin, TX
 description: Best Coffee in Austin
-logo: /assets/luckylab200.png
+logo: https://raw.githubusercontent.com/slandath/images/refs/heads/main/coffee/luckylab200.png
 website: /shops/lab
 ---
 
