--- a/shops/madcap.liquid
+++ b/shops/madcap.liquid
@@ -5,7 +5,7 @@ title: Madcap Coffee
 name: Madcap Coffee
 location: Grand Rapids, MI
 description: My Annual Ritual
-logo: /assets/madcap200.png
+logo: https://raw.githubusercontent.com/slandath/images/refs/heads/main/coffee/madcap200.png
 website: /shops/madcap
 ---
 
